# binjs-ref

./: Cargo.toml
crates/binjs_es6/: Cargo.toml  build.rs
crates/binjs_es6/spec/: es6.webidl
crates/binjs_es6/src/: io.rs
crates/binjs_generate_library/: Cargo.toml
crates/binjs_generate_library/src/: lib.rs
crates/binjs_generic/: build.rs
crates/binjs_io/: Cargo.toml
crates/binjs_io/src/: lib.rs
crates/binjs_io/src/bytes/: compress.rs  float.rs  varnum.rs
crates/binjs_io/src/entropy/: baseline.rs  dictionary.rs  mod.rs  predict.rs  probabilities.rs  read.rs  rw.rs  util.rs  write.rs
crates/binjs_io/src/entropy/read/: content_decoders.rs  mod.rs
crates/binjs_io/src/entropy/write/: mod.rs
crates/binjs_io/src/io/: content.rs  statistics.rs
crates/binjs_io/src/multipart/: mod.rs
crates/binjs_ratel/: Cargo.toml
crates/binjs_shared/: Cargo.toml
crates/binjs_shared/src/: ast.rs  lib.rs  shared_string.rs
docs/: aliases.js  search-index.js
docs/aho_corasick/: struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
docs/alloc_no_stdlib/: all.html  enum.AllocatorC.html  fn.bzero.html  fn.uninitialized.html  index.html  macro.bind_global_buffers_to_allocator.html  macro.declare_stack_allocator_struct.html  macro.define_allocator_memory_pool.html  macro.define_index_ops.html  macro.define_index_ops_mut.html  macro.define_stack_allocator_traits.html  macro.static_array.html  struct.AllocatedStackMemory.html  struct.CallocBackingStore.html  struct.StackAllocator.html  trait.AllocatedSlice.html  trait.Allocator.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
docs/alloc_stdlib/: all.html  index.html  struct.AllocatedStackMemory.html  struct.StackAllocator.html  trait.Allocator.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
docs/ansi_term/: enum.Color.html  enum.Colour.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html
examples/: compare_compression.rs  generate.rs  roundtrip.rs  sample_directory.rs
tests/: test_dictionary_builder.rs  test_paths.rs  test_roundtrip.rs
(+3983 files in other folders)
