[package]
name = "binjs_es6"
version = "0.2.2"
authors = ["David Teller <D.O.Teller@gmail.com>"]
build = "build.rs"
description = "ES6 component of the Binary AST reference implementation."
license = "MIT"
repository = "https://github.com/Yoric/binjs-ref"

[dependencies]
assert_matches = "^1.3"
binjs_io = { path = "../binjs_io/", version = "^0.2" }
binjs_shared = { path = "../binjs_shared/", version = "^0.1" }
itertools = "^0.7"
json = "^0.11"
log = "^0.4"

[build-dependencies]
binjs_generate_library = { path = "../binjs_generate_library/", version = "^0.2" }
binjs_meta = { path = "../binjs_meta/", version = "^0.4" }
webidl = "^0.8"
